# qlin_ms_camera_processing

./: .gitattributes  .gitignore  .lfsconfig  CMakeLists.txt  README.md  package.xml  setup.py
config/: cv2_correction_param.mat  rosconsole.config
examaple/: 5_test.py  __init__.py  augmentation.py  auto.py  extract_frames.py  make_labeled_image.py  rename.py  train_confidence_map.py  video_output_confidence_map.py
examaple/not_used/: make_resized_dataset.py  train.py  video_output.py
examaple/tools/: Dataset_confidence_map.py  Parameters.py  functions.py
launch/: camera_tracker_reciever.launch
model/: best_model.pth  best_model_576.pth  best_model_960.pth
msg/: TrackerStatus.msg
scripts/: qlin_camera_tracking_receiver_node.py  run_all.py  run_all_training.py  run_realtime.py  run_realtime_cv2.py  run_realtime_decklink.py  run_stream_cv2.py  run_stream_dRoI_cv2.py  test_realtime.py
scripts/config/: network_param.py  training_param.py
scripts/decklink/AR_CoppeliaSim_Py/: basic_ar_scene.ttt  decklink_interface.py  decklink_interface_to_coppeliasim.py  synchronousImageTransmission.py
scripts/decklink/DecklinkInterface/x64/Release/: DecklinkInterface.exp  DecklinkInterface.lib  DecklinkInterface.tlb
scripts/inference_step/: inference_common.py  inference_on_vid_file.py  inference_realtime.py  inference_realtime_dynamicROI.py  stream_info_display.py
scripts/postprocessing/: process_overview_video_for_key_point_tracking.py  process_video_for_key_point_tracking.py
scripts/train_step/: frame_extration.py  make_augmentation.py  pre_training_relocate.py  process_image_set.py  re_locate_file.py  split_train_val_test.py  split_train_validation_test.py  train_network.py
src/qlin_ms_camera_processing/: __init__.py  qlin_tracker_interface.py  qlin_tracker_provider.py
