<?xml version="1.0"?>
<package>
  <name>qlin_camera_control</name>
  <version>0.0.0</version>
  <description>The qlin_camera_processing package</description>

  <maintainer email="qlin1806m@gmail.com">qlin1806</maintainer>
  <license>GPLv2</license>

  <!-- <url type="website">http://wiki.ros.org/joint_state</url> -->
  <author email="qlin1806@g.ecc.u-tokyo.ac.jp">Quentin Lin</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sas_conversions</build_depend>




  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sas_conversions</run_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
